--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.3.2",
     "@testing-library/user-event": "^7.1.2",
+    "antd": "^4.1.5",
     "axios": "^0.19.0",
+    "dayjs": "^1.8.24",
     "http-proxy-middleware": "^0.20.0",
     "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
