--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
+  "homepage":".",
   "browserslist": {
     "production": [
       ">0.2%",
