--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "homepage": ".",
+  "homepage": "/",
   "browserslist": {
     "production": [
       ">0.2%",
