--- a/package.json
+++ b/package.json
@@ -8,12 +8,14 @@
     "@testing-library/user-event": "^7.1.2",
     "antd": "^4.1.5",
     "axios": "^0.19.0",
+    "babel-plugin-import": "^1.13.0",
+    "customize-cra": "^0.9.1",
     "dayjs": "^1.8.24",
     "http-proxy-middleware": "^0.20.0",
-    "lodash": "^4.17.15",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
     "react-addons-css-transition-group": "^15.6.2",
+    "react-app-rewired": "^2.1.6",
     "react-copy-to-clipboard": "^5.0.2",
     "react-dom": "^16.12.0",
     "react-loadable": "^5.5.0",
@@ -25,8 +27,8 @@
     "react-zmage": "^0.8.5-beta.36"
   },
   "scripts": {
-    "start": "react-scripts start",
-    "build": "react-scripts build",
+    "start": "react-app-rewired start",
+    "build": "react-app-rewired build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -45,5 +47,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "webpack-bundle-analyzer": "^3.8.0"
   }
 }
