--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "babel-plugin-import": "^1.13.0",
     "customize-cra": "^0.9.1",
     "dayjs": "^1.8.24",
+    "fundebug-javascript": "^2.4.2",
     "http-proxy-middleware": "^0.20.0",
     "node-sass": "^4.13.0",
     "react": "^16.12.0",
